# tauri-window-issue

./: .eslintrc.json  .gitignore  README.md  apt-dependencies.txt  deno.json  initial-pr-sync-template.md  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
app/: globals.css  layout.tsx  middleware.ts  page.tsx
app/components/: Loading.tsx  PassField.tsx  SettingsButton.tsx
app/login/: page.tsx
dev-scripts/: clean-front-end.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/schemas/: acl-manifests.json  capabilities.json  windows-schema.json
src-tauri/src/: lib.rs  main.rs
