[package]
name = "app"
version = "1.0.0" # NOTE: This must follow the syntax 'v#.#.#'
description = "SMART-Desk"
authors = ["Calvin Wilkinson (KinsonDigital)"]
license = ""
repository = "https://github.com/EngagedAgility/SMART-Desk"
default-run = "app"
edition = "2021"
rust-version = "1.77.2"
build= "build.rs"

[lib]
name = "smart_desk_lib"
crate-type = ["lib", "cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
serde_json = "^1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.6", features = [] }
tauri-plugin-shell = "2.0.2"
tauri-plugin-store = "2.0.1"
tauri-plugin-fs = "2.0.3"
tauri-plugin-process = "2.0.1"
tauri-plugin-updater = "2.0.2"
tauri-plugin-clipboard-manager = "2.0.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
